updated image links

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@ a product designer currently helping students discover the world.</div>
 
     <div class="col-6">
       <div class="projectGrid">
-        <a href="/education-first"><img src="../assets/images/ef_thumb.jpg"></a>
+        <a href="/education-first"><img src="assets/images/ef_thumb.jpg"></a>
  
     </div>
   </div>
@@ -39,7 +39,7 @@ a product designer currently helping students discover the world.</div>
 
     <div class="col-6">
       <div class="projectGrid"> 
-        <a href="/novartis"><img src="../assets/images/thumb_novartis2.jpg"></a>
+        <a href="/novartis"><img src="assets/images/thumb_novartis2.jpg"></a>
 
     </div>
   </div>
@@ -59,8 +59,8 @@ a product designer currently helping students discover the world.</div>
 
     <div class="col-6">
       <div class="projectGrid">
-        <!-- <div class="cardHero" style="background-image: url(../assets/images/ef_thumb.jpg)"></div> -->
-        <a href="/ultrasound"><img src="../assets/images/ultrasound_thumb.jpg"></a>
+        <!-- <div class="cardHero" style="background-image: url(assets/images/ef_thumb.jpg)"></div> -->
+        <a href="/ultrasound"><img src="assets/images/ultrasound_thumb.jpg"></a>
          <!--  </div> -->
     </div>
   </div>
@@ -80,8 +80,8 @@ a product designer currently helping students discover the world.</div>
 
     <div class="col-6">
       <div class="projectGrid">
-        <!-- <div class="cardHero" style="background-image: url(../assets/images/ef_thumb.jpg)"></div> -->
-        <a href="/dogstay"><img src="../assets/images/dogStay_thumb6.jpg"></a>
+        <!-- <div class="cardHero" style="background-image: url(assets/images/ef_thumb.jpg)"></div> -->
+        <a href="/dogstay"><img src="assets/images/dogStay_thumb6.jpg"></a>
          <!--  </div> -->
     </div>
   </div>
@@ -108,7 +108,7 @@ a product designer currently helping students discover the world.</div>
         <div class="grid-display">
           <div class="row">
                 <div class="col-6 aboutPic">
-                       <img src="../assets/images/matthewPic.jpg">
+                       <img src="assets/images/matthewPic.jpg">
                 </div>
                                <div class="col-6 about">
                        <p>I grew up in Kansas City, Missouri, raised by two hardworking parents who reluctantly let me study abroad in Germany when I was 17. After graduating high school I moved to Seattle and worked in cafes until I could afford college.
