fix font project tile ef

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -414,8 +414,8 @@ html .page-content-alternative {
 
 
 .projectTitleBig {
-    font-size: 6.66667rem; 
-    line-height: 7.33333rem;
+    font-size: 10vw; 
+    line-height: 1;
 }
 
 .row .projectIntro p {
