--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
         <ul class="social-media">
         	<li><a href="https://twitter.com/mattihicks">Twitter</a></li>
         	<li><a href="https://github.com/mattihicks">Github</a></li>
-        	<li><a href="https://www.instagram.com/mattihixx/">Instagram</a></li>
+        	<li><a href="https://dribbble.com/matti">Dribbble</a></li>
         </ul>
 
 </footer>
