updated meta info

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,12 +5,12 @@
   <meta content="image" property="og:image">
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@milanzwaan" />
-  <meta name="twitter:image" content="https://ilanzwaan.com/assets/images/creativeMaker.jpg">
-  <meta property="og:url" content="https://www.ilanzwaan.com" />
-  <meta property="og:title" content="MatthewMatthew" />
-  <meta property="og:image" content="https://matthewmatthew.com/assets/images/creativeMaker.jpg">
-  <meta property="og:description" content="A blog about life and creativity." />
+  <meta name="twitter:site" content="@mattihixx" />
+  <meta name="twitter:image" content="https://mattihicks.com/assets/images/matthewPic.jpg">
+  <meta property="og:url" content="https://www.mattihicks.com" />
+  <meta property="og:title" content="Matti Hicks - Portfolio" />
+  <meta property="og:image" content="https://mattihicks.com/assets/images/matthewPic.jpg">
+  <meta property="og:description" content="Portfolio site for Matti Hicks, product designer and writer." />
 
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
