--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,9 +20,9 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
- <link rel="icon" type="assets/images/favicon-32x32.png">
+ <!-- <link rel="icon" type="assets/images/favicon-32x32.png">
 <link rel="icon" type="assets/images/favicon-96x96.png">
 <link rel="icon" type="assets/images/favicon-16x16.png">
-<link rel="icon" type="assets/images/favicon.png">
+<link rel="icon" type="assets/images/favicon.png"> -->
 
 </head>
