--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -9,29 +9,6 @@
 
     {% include header.html %}
 
-<!--       <h1 class="post-title">{{ page.title }}</h1> -->
-         <!--    <nav class="site-nav"> -->
-<!--       <a href="#" class="menu-icon">
-        <svg viewBox="0 0 18 15">
-          <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-        </svg>
-      </a> -->
-
-<!--       <div class="trigger">
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <a class="page-link" href="{{ site.baseurl }}/">Home</a>
-          <a class="page-link active" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
-          {% endif %}
-        {% endfor %}
-
-      </div>
-
-
-
-    </nav> -->
 
     <div class="page-content">
 
@@ -66,7 +43,7 @@
       </div>
     </div>
 
-     <img class="full-image" src="../assets/images/Artboard_ef5-1.jpg">
+     <img class="full-image" src="../assets/images/Artboard_ef5-1.jpg" alt="ef design examples">
 
         <div class="page-content">
 
@@ -108,7 +85,7 @@ I had to understand if their assumption - that people would book an expensive la
 
         </div>
       </div>
-      <img class="full-image" src="../assets/images/secondBoard.jpg">
+      <img class="full-image" src="../assets/images/secondBoard.jpg" alt="ef design wireframes">
 
         <div class="page-content">
 
@@ -155,7 +132,7 @@ We have shifted the company paradigm of what makes an online experience successf
 
         </div>
       </div>
-      <img class="full-image" src="../assets/images/Artboard_ef2.jpg">
+      <img class="full-image" src="../assets/images/Artboard_ef2.jpg" alt="ef design more design examples">
 
 
     <div class="grid-display">
