--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -138,16 +138,16 @@ We have shifted the company paradigm of what makes an online experience successf
     <div class="grid-display">
           <div class="row projectBody">
              <div class="col-3">
-              <a href="/education-first"><img src="../assets/images/EF-2.png"></a>
+              <a href="/education-first"><img src="../assets/images/EF-2.png" alt="ef nav link"></a>
              </div>
              <div class="col-3">
-              <a href="/novartis"><img src="../assets/images/NOVARTIS-2.png"></a>
+              <a href="/novartis"><img src="../assets/images/NOVARTIS-2.png" alt="novartis nav link"></a>
              </div>
              <div class="col-3">
-              <a href="/ultrasound"><img src="../assets/images/ultrasound-2.png"></a>
+              <a href="/ultrasound"><img src="../assets/images/ultrasound-2.png" alt="ultrasound nav link"></a>
              </div>
              <div class="col-3">
-              <a href="/dogstay"><img src="../assets/images/dogStay-2.png"></a>
+              <a href="/dogstay"><img src="../assets/images/dogStay-2.png" alt="dogstay nav link"></a>
              </div>
            </div>
          </div>
