--- a/_layouts/projectNovartis.html
+++ b/_layouts/projectNovartis.html
@@ -1,134 +1,110 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
-
-
-
-    {% include header.html %}
-
-<!--       <h1 class="post-title">{{ page.title }}</h1> -->
-         <!--    <nav class="site-nav"> -->
-<!--       <a href="#" class="menu-icon">
-        <svg viewBox="0 0 18 15">
-          <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-        </svg>
-      </a> -->
-
-<!--       <div class="trigger">
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <a class="page-link" href="{{ site.baseurl }}/">Home</a>
-          <a class="page-link active" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
-          {% endif %}
-        {% endfor %}
-
-      </div>
+<body>
 
 
 
-    </nav> -->
+  {% include header.html %}
 
-    <div class="page-content">
 
-      <div class="wrapper">
-         <div class="page-title">{{ page.title }}</div>
-         <div class="page-subtitle">{{ page.date }}</div>
-         <div class="page-intro">{{ page.intro }}</div>
-</div>
-</div>
+  <div class="page-content">
+
+    <div class="wrapper">
+     <div class="page-title">{{ page.title }}</div>
+     <div class="page-subtitle">{{ page.date }}</div>
+     <div class="page-intro">{{ page.intro }}</div>
+   </div>
+ </div>
  <div class="page-content-alternative">
-        <div class="wrapper">
-          <div class="grid-display">
-          <div class="row projectBody">
-             <div class="col-2">
-             </div>
-                <div class="col-8">
+  <div class="wrapper">
+    <div class="grid-display">
+      <div class="row projectBody">
+       <div class="col-2">
+       </div>
+       <div class="col-8">
 
         <h2 class="projectTitle">Designing for cancer research</h2>
-<p>At Novartis I was involved in a number of design projects related to improving how people communicated and shared information with each other. Along with the product manager and tech lead, I developed a longterm product strategy and roadmap on how best to improve collaboration throughout the company. </p>
+        <p>At Novartis I was involved in a number of design projects related to improving how people communicated and shared information with each other. Along with the product manager and tech lead, I developed a longterm product strategy and roadmap on how best to improve collaboration throughout the company. </p>
 
-<p>Some of the biggest challenges were:</p>
+        <p>Some of the biggest challenges were:</p>
 
-<p>1. large organizational silos</p>
+        <p>1. large organizational silos</p>
 
-<p>2. outdated systems and technology</p>
+        <p>2. outdated systems and technology</p>
 
-<p>3. team competitiveness and lack of sharing incentivization </p> 
+        <p>3. team competitiveness and lack of sharing incentivization </p> 
 
-<p>We first prioritized 3) lack of team sharing, because it seemed at the time like low-hanging fruit. We first researched labs that were well-networked, shared information throughout the organization, and demonstrated a healthy work environment, meaning: lab heads who were active in internal forums and encouraged collaboration among their lab scientists.</p>
+        <p>We first prioritized 3) lack of team sharing, because it seemed at the time like low-hanging fruit. We first researched labs that were well-networked, shared information throughout the organization, and demonstrated a healthy work environment, meaning: lab heads who were active in internal forums and encouraged collaboration among their lab scientists.</p>
 
-<p>Based on this research and the technologies that the teams were already using, we then created a prototype called the 'Activity Stream' that was focused on sharing information about colleagues, instruments, and publications among a few highly active project teams. What the prototype lacked most was providing updates that directly related to the scientists' work, such as information on new compound structures or up-to-date information about the instruments they were using. We then utilized other APIs for the activity stream and saw an uptick in use.</p>
+        <p>Based on this research and the technologies that the teams were already using, we then created a prototype called the 'Activity Stream' that was focused on sharing information about colleagues, instruments, and publications among a few highly active project teams. What the prototype lacked most was providing updates that directly related to the scientists' work, such as information on new compound structures or up-to-date information about the instruments they were using. We then utilized other APIs for the activity stream and saw an uptick in use.</p>
 
-<p>I was involved with this project from the very beginning, from the user research to designing early concept wireframes, mockups, and prototyping the UI in HTML/CSS/JS for the user feedback sessions, and also learning how to use the javascript library D3 to visualize scientific connections.</p>
-                              </div>
+        <p>I was involved with this project from the very beginning, from the user research to designing early concept wireframes, mockups, and prototyping the UI in HTML/CSS/JS for the user feedback sessions, and also learning how to use the javascript library D3 to visualize scientific connections.</p>
       </div>
     </div>
+  </div>
+</div>
+</div>
 
-        </div>
-      </div>
 
+<div class="page-content">
 
-        <div class="page-content">
-
-      <div class="wrapper">
-<div class="grid-display">
-          <div class="row">
-             <div class="col-2">
-             </div>
-                <div class="col-8">
+  <div class="wrapper">
+    <div class="grid-display">
+      <div class="row">
+       <div class="col-2">
+       </div>
+       <div class="col-8">
 
         <h2 class="projectTitle">What we built</h2>
         <p>Based on this research, we began a series of initiatives focused on improving collaboration across the organization. One of these initiatives was 'Activity Stream', a web app focused on sharing information about colleagues, instruments, and publications among project teams. After developing an initial prototype, we learned that what the prototype lacked most was providing updates that directly related to the scientists' work, such as information on new compound structures or up-to-date information about the instruments the scientists were using. We then utilized APIs that displayed scientific data and saw an uptick in use.
-</p><p>
-In addition to user research, I was responsible for designing the early concept wireframes, mockups, and prototyping the UI in HTML/CSS/JS for the user feedback sessions, and also learned how to use the javascript library D3 to visualize scientific connections.</p>
-                              </div>
+        </p><p>
+        In addition to user research, I was responsible for designing the early concept wireframes, mockups, and prototyping the UI in HTML/CSS/JS for the user feedback sessions, and also learned how to use the javascript library D3 to visualize scientific connections.</p>
       </div>
     </div>
-     
   </div>
+
+</div>
 </div>
 
 
-         <img class="full-image" style="margin-top:40px" src="../assets/images/activityStream_mockup-1.jpg">
+<img class="full-image" style="margin-top:40px" src="../assets/images/activityStream_mockup-1.jpg" alt="activity stream mockup">
 
 
-    <div class="grid-display">
-          <div class="row projectBody">
-             <div class="col-3">
-              <a href="/education-first"><img src="../assets/images/EF-2.png"></a>
-             </div>
-             <div class="col-3">
-              <a href="/novartis"><img src="../assets/images/NOVARTIS-2.png"></a>
-             </div>
-             <div class="col-3">
-              <a href="/ultrasound"><img src="../assets/images/ultrasound-2.png"></a>
-             </div>
-             <div class="col-3">
-              <a href="/dogstay"><img src="../assets/images/dogStay-2.png"></a>
-             </div>
-           </div>
-         </div>
-    
-           <div class="page-content">
+<div class="grid-display">
+  <div class="row projectBody">
+   <div class="col-3">
+    <a href="/education-first"><img src="../assets/images/EF-2.png" alt="nav link EF"></a>
+  </div>
+  <div class="col-3">
+    <a href="/novartis"><img src="../assets/images/NOVARTIS-2.png" alt="nav link novartis"></a>
+  </div>
+  <div class="col-3">
+    <a href="/ultrasound"><img src="../assets/images/ultrasound-2.png" alt="nav link ultrasound"></a>
+  </div>
+  <div class="col-3">
+    <a href="/dogstay"><img src="../assets/images/dogStay-2.png" alt="nav link dogstay"></a>
+  </div>
+</div>
+</div>
 
-      <div class="wrapper">
+<div class="page-content">
 
-           {{ content }}
-        {% include footer.html %}
-      </div>
-    </div>          
+  <div class="wrapper">
 
-
+   {{ content }}
+   {% include footer.html %}
+ </div>
+</div>          
 
 
-    {% if jekyll.environment == 'production' %}
-    {% include analytics.html %}
-    {% endif %}
-  </body>
+
+
+{% if jekyll.environment == 'production' %}
+{% include analytics.html %}
+{% endif %}
+</body>
 
 </html>
