frame border fix

--- a/_layouts/projectDogstay.html
+++ b/_layouts/projectDogstay.html
@@ -109,7 +109,7 @@
       </div>
     </div>
   </div>
-  <div class="video-container"><iframe src="https://player.vimeo.com/video/159521711" width="640" height="400" allowfullscreen></iframe></div>
+  <div class="video-container"><iframe src="https://player.vimeo.com/video/159521711" width="640" height="400" frameBorder="0" allowfullscreen></iframe></div>
 </div>
 </div>
 
