--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-  <a class="site-title" href="{{ site.baseurl }}/">Matti</a>
+  <a class="site-title" href="{{ site.baseurl }}/">Matti Hicks</a>
 
 
   <div class="wrapper">
