footer color fix

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -160,10 +160,10 @@
     text-decoration: none;
     margin-top: 32px;
 } .site-footer a {
-    color: #a7a9ab;
+    color: rgba(0,0,0,0.8);
     text-decoration: none;
     } .site-footer li a {
-    color: #a7a9ab;
+    color: rgba(0,0,0,0.8);
     text-decoration: none;
     }
 
