--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@
       </div>
       <div class="col-6">
         <div class="projectGrid">
-        <h4>Education First</h4>
+        <h4>EF Finland</h4>
         <p>UX design, user research, prototyping, and content strategy</p>
         <p>Read about <a href="/education-first">this work</a></p>
         </div>
