--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -449,3 +449,22 @@ height: 100%;
 .listTitle {
     font-family: $base-font-family-sectionTitle;
 }
+
+.site-link {
+    margin-top: 24px;
+    font-size: 1.22222rem;
+    line-height: 1.88889rem;
+}
+
+.captionText {
+    font-size: 14px;
+}
+
+.projectMocks {
+    margin-top: 12px;
+}
+
+.projectMocks img {
+    border: 1px solid #EDEDED;
+    margin-bottom: 16px;
+}
