Remove case study link

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -105,7 +105,7 @@ I had to understand if their assumption - that people would book an expensive la
 <br/><br/>
 3. To encourage people to book a course online, we learned that price transparency and flexibility is key. I designed the booking flow so that the price is on every step after they decide when they want to travel. I also worked with the business so that users can reserve a course and cancel within two weeks - rather than directly book and be locked into an expensive trip.
 <br/><br/>
-As one of two product designers, I was involved in every aspect of the site. The areas where I had the most impact were: customer insights and design ideation, content strategy, the school experience pages, and the booking flows (see case study).
+As one of two product designers, I was involved in every aspect of the site. The areas where I had the most impact were: customer insights and design ideation, content strategy, the school experience pages, and the booking flows.
 <br/><br/>
 <a href="https://www.ef.fi/languagesabroad/#/">Explore the site</a>.</p>
                               </div>
