--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -344,6 +344,7 @@ html .page-content {
 html .page-content-alternative {
     background-color: #fafafa;
     padding: 40px 40px;
+    margin-top: -15px;
 }
 
 
@@ -427,6 +428,7 @@ html .page-content-alternative {
 
 .projectImage {
     margin-top: 32px;
+    margin-left: 16px;
 }
 
 
@@ -451,9 +453,9 @@ height: 100%;
 }
 
 .site-link {
-    margin-top: 24px;
     font-size: 1.22222rem;
     line-height: 1.88889rem;
+    margin-bottom: 32px;
 }
 
 .captionText {
@@ -469,4 +471,12 @@ height: 100%;
 .projectMocks img {
     border: 1px solid #EDEDED;
     margin-bottom: 16px;
+}
+
+.wireframeImages {
+    padding: 0 0 !important;
+}
+
+.rowMockups {
+    margin-top: -30px;
 }
