--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -154,7 +154,7 @@
  * Site footer
  */
 .site-footer {
-    font: $font-name-body;
+    font-family: $font-name-body;
     padding: 0px 0;
     font-size: 14px;
     text-decoration: none;
