--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,6 @@
                 a product designer currently helping students discover the world.
               </div>
           </div>
- <!--          <h3 class="projectStart">Recent projects</h3> -->
 
     <div class="row">
       <div class="col-6">
@@ -25,7 +24,7 @@
       <div class="col-6">
         <div class="projectGrid">
         <h4>EF Finland</h4>
-        <p>UX design, user research, prototyping, and content strategy</p>
+        <p>Product Designer, facilitating the end to end customer experience through UX design, user research, prototyping, and content strategy</p>
         <p>Read about <a href="/education-first">this work</a></p>
         </div>
     </div>
