--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -145,7 +145,9 @@
       </div>
 
 
-
+ {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
 
   </body>
 
