--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@
         <div class="grid-display">
           <div class="row">
                 <div class="col-12 intro">Hi there! I'm Matti Hicks,
-                a product designer currently helping students discover the world.
+                a UX designer currently helping students discover the world.
               </div>
           </div>
 
@@ -24,7 +24,7 @@
       <div class="col-6">
         <div class="projectGrid">
         <h4>EF Finland</h4>
-        <p>Product Designer, facilitating the end to end customer experience through UX design, user research, prototyping, and content strategy</p>
+        <p>UX Designer, facilitating the end to end customer experience through product design, user research, prototyping, and content strategy</p>
         <p>Read about <a href="/education-first">this work</a></p>
         </div>
     </div>
