--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,8 @@
   <meta name="twitter:image" content="https://mattihicks.com/assets/images/matthewPic.jpg">
   <meta property="og:url" content="https://www.mattihicks.com" />
   <meta property="og:title" content="Matti Hicks - Portfolio" />
-  <meta property="og:image" content="https://mattihicks.com/assets/images/matthewPic.jpg">
-  <meta property="og:description" content="Portfolio site for Matti Hicks, product designer and writer." />
+  <meta property="og:image" content="https://mattihicks.com/assets/images/mattiSmall.jpg">
+  <meta property="og:description" content="Portfolio site for Matti Hicks, product designer and researcher." />
 
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
