--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -127,7 +127,7 @@
             <ul>
               <li>Listen to <a href="https://spec.fm/podcasts/design-details">Design Details</a></li>
               <li>Develop side projects</li>
-              <li><a href="https://hickspress.com">Write</a></li>
+              <li><a href="https://www.goodreads.com/mattihicks">Read books</a></li>
               <li>Learn Hebrew, German</li>
             </ul>
           </div>
