Updated listening link

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -125,7 +125,7 @@
           <div class="col-4">
             <h4>And for fun I...</h4>
             <ul>
-              <li>Listen to <a href="https://spec.fm/podcasts/design-details">Design Details</a></li>
+              <li>Listen to <a href="https://www.mixed-methods.org/">Mixed Methods</a></li>
               <li>Develop side projects</li>
               <li><a href="https://www.goodreads.com/mattihicks">Read books</a></li>
               <li>Learn Hebrew, German</li>
