--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -95,7 +95,7 @@
           <div class="col-6 about">
             <p>I grew up in Kansas City, Missouri, raised by two hardworking parents who reluctantly let me study abroad in Germany when I was 17. After graduating high school I moved to Seattle and worked in cafes until I could afford college.</p>
             <p>In college I won scholarships that enabled me to develop strong passions for art, digital design, research, and writing. I also studied in Italy, interned in Holland, and conducted fieldwork in Uganda.</p>
-            <p>Less than a month after graduating college I moved to Switzerland where I've been a designer and researcher for the past six years.</p>
+            <p>Less than a month after graduating college I moved to Switzerland where I've been living for the past five years.</p>
           </div>
         </div>
       </div>
