--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@
         <div class="grid-display">
           <div class="row">
                 <div class="col-12 intro">Hi there! I'm Matti Hicks,
-                a UX designer currently helping students discover the world.
+                a UX researcher and designer currently helping students discover the world.
               </div>
           </div>
 
@@ -24,7 +24,7 @@
       <div class="col-6">
         <div class="projectGrid">
         <h4>EF Finland</h4>
-        <p>UX Designer, facilitating the end to end customer experience through product design, user research, prototyping, and content strategy</p>
+        <p>UX Designer, facilitating the end to end customer experience through product design and user research</p>
         <p>Read about <a href="/education-first">this work</a></p>
         </div>
     </div>
@@ -39,7 +39,7 @@
     <div class="col-6">
       <div class="projectGrid">
        <h4>Designing for cancer research</h4>
-        <p>Senior UX Designer, working to design better social and collaboration technologies</p>
+        <p>Senior UX Designer, working to research and design better social and collaboration technologies</p>
         <p>Read about <a href="/novartis">this work</a></p>
       </div>
     </div>
