projet grid title correct

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,8 +23,8 @@
       </div>
       <div class="col-6">
         <div class="projectGrid">
-        <h4>EF Finland</h4>
-        <p>UX Designer, facilitating the end to end customer experience through product design and user research</p>
+        <h4>Digital transformation for EF Finland</h4>
+        <p>UX Designer and Researcher, facilitating the end to end customer experience in a new digital model</p>
         <p>Read about <a href="/education-first">this work</a></p>
         </div>
     </div>
