--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@
       <div class="col-6">
         <div class="projectGrid">
         <h4>Digital transformation for EF Finland</h4>
-        <p>UX Designer and Researcher, facilitating the end to end customer experience in a new digital model</p>
+        <p>UX Designer and Researcher, facilitating the end to end customer experience with a new digital model</p>
         <p>Read about <a href="/education-first">this work</a></p>
         </div>
     </div>
