fixed some intro text, titles

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@
       <div class="wrapper">
         <div class="grid-display">
           <div class="row">
-                <div class="col-12 intro">Hi there! I'm Matti Hicks,
+                <div class="col-12 intro">I'm Matti Hicks,
                 a UX researcher and designer currently helping students discover the world.
               </div>
           </div>
