--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -43,7 +43,7 @@ ul, ol, dl, figure,
 .intro {
     font-family: $intro-font-family;
     font-size: 3.55556rem;
-    font-size: 3vw;
+    font-size: 4.125rem;
     line-height: 4.44444rem;
     line-height: 1.2;
     letter-spacing: -0.015em;
