full width ef project image

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -378,6 +378,7 @@ html .page-content-alternative {
   -o-background-size: cover;
   background-size: cover;
   margin: 0;
+  width: 100%;
 }
 
 .projectTitle {
