update intro website

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@
         <div class="grid-display">
           <div class="row">
                 <div class="col-12 intro">I'm Matti Hicks,
-                a UX researcher + designer + writer + coder.
+                a UX researcher / designer currently helping students discover the world.
               </div>
           </div>
 
