added ef journey case study

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,6 +18,21 @@
     <div class="row">
       <div class="col-6">
         <div class="projectGrid">
+          <a href="/customer-journey"><img src="assets/images/ef-customerJourney.jpg" alt="customer journey image"></a>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="projectGrid">
+        <h4>Customer journey mapping in Spain and Finland</h4>
+        <p>UX Researcher, tracing the customer and sales journey to drive product innovation</p>
+        <p>Read about <a href="/customer-journey">this work</a></p>
+        </div>
+    </div>
+  </div>
+
+    <div class="row">
+      <div class="col-6">
+        <div class="projectGrid">
           <a href="/education-first"><img src="assets/images/ef_thumb.jpg" alt="novartis image"></a>
         </div>
       </div>
