--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -200,7 +200,7 @@
 .page-content {
     // padding: $spacing-unit 0;
     margin-top: 48px;
-    margin-bottom: 32px;
+    margin-bottom: 56px;
 }
 
 .page-content-alternative {
@@ -295,6 +295,41 @@
 
 p img .full-image {
     margin-bottom: 0;
+}
+
+.objectiveResearchList {
+    margin-left: 0;
+    margin-bottom: 12px;
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  overflow: hidden;
+}
+        
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.boldText {
+    font-family: $header-page-links-font-family;
+}
+
+.projectNav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.projectNav .col-2 {
+    text-align:center;
 }
 
 
