--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,8 @@ $font-name-body: "GT-Walsheim-Light";
 $font-path-file-name-body: {{ baseurl }}/assets/fonts/GT-Walsheim-Light;
 $font-name-quote: "GT-Walsheim-Regular";
 $font-path-file-name-quote: {{ baseurl }}/assets/fonts/GT-Walsheim-Regular;
+$font-name-emphasis: "GT-Walsheim-Regular-Italic";
+$font-path-file-name-emphasis: {{ baseurl }}/assets/fonts/GT-Walsheim-Light-Oblique;
 $font-name-title: "TiemposTextWeb-Semibold";
 $font-path-file-name-title: {{ baseurl }}/assets/fonts/TiemposTextWeb-Semibold;
 
@@ -49,6 +51,11 @@ $font-path-file-name-title: {{ baseurl }}/assets/fonts/TiemposTextWeb-Semibold;
   src: url($font-path-file-name-quote+'.woff') format('woff');
 }
 
+@font-face {
+  font-family: $font-name-emphasis;
+  src: url($font-path-file-name-emphasis+'.woff') format('woff');
+}
+
 // Our variables
 $title-font-family: $font-name-title, Georgia, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $intro-font-family: $font-name-intro, Georgia, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -57,6 +64,7 @@ $base-font-family-sectionTitle: $font-name-bold, Georgia, "Helvetica Neue", Helv
 $header-page-links-font-family: $font-name-regular, Georgia, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $header-font-family: $font-name, Georgia, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $blockquote-font-family: $font-name-quote, Georgia, "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family-quote: $font-name-emphasis, Georgia, "Helvetica Neue", Helvetica, Arial, sans-serif;;
 $base-font-size:   16px; 
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
